# Focusing-App

./: .gitignore  AGENTS.md  CHANGES.md  DEBUGGING.md  DEPLOYMENT.md  FINAL_CHANGES.md  Future.md  IMPLEMENTATION_SUMMARY.md  MACOS_26_WORKAROUND.md  MACOS_VERSIONING.md  MENU_BAR_TIMER.md  PHASE1_IMPLEMENTATION.md  QUICKSTART.md  README.md  READY_TO_DEPLOY.md  RELEASE.md  RELEASE_GUIDE.md  WHATS_NEXT.md  analyze_focus_data.py  package-lock.json  package.json  vite.config.ts
.gemini/: copilot-instructions.md  settings.json
.github/workflows/: README.md  build.yml  release.yml
docs/: DOCUMENT_OF_TRUTH.md  LESSONS.md  MVP.md  ROADMAP.md
specs/: 001-session-review-panel.md  002-calendar-integration.md  003-accountability-box.md  004-settings-management.md  005-data-logging.md  006-menu-bar-integration.md
src/: index.html  main.js  settings.html  tauri-bridge.js  test.html
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: app-core-access.json
src-tauri/icons/: create_icon.py  icon.icns
src-tauri/src/: calendar.rs  logs.rs  main.rs
src/js/: sessionReview.js
