[package]
name = "focus-time"
version = "0.1.0"
description = "Focus Time menu bar timer"
authors = ["Your Name"]
license = "MIT"
edition = "2021"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [
  "api-all",
  "icon-png",
  "system-tray",
  "custom-protocol",
] }
