[package]
name = "focus-time"
version = "0.1.0"
description = "Focus Time menu bar timer"
authors = ["Your Name"]
license = "MIT"
edition = "2021"

[features]
default = ["custom-protocol", "system-tray"]
custom-protocol = ["tauri/custom-protocol"]
system-tray = ["tauri/system-tray"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.24", default-features = false, features = ["png"] }
tauri = { version = "1", features = [ "macos-private-api", "system-tray",
  "api-all",
  "icon-png",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
block = "0.1"
