[package]
name = "focus-time"
version = "0.1.0"
description = "Focus Time menu bar timer"
authors = ["Your Name"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico", "macos-private-api"] }
tauri-plugin-shell = "2"
image = "0.24"


[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
block = "0.1"
